# web/openapi.json
@@ -5,6 +5,24 @@
     "version": "0.1.0"
   },
   "paths": {
+    "/api/accounts": {
+      "get": {
+        "summary": "Accounts",
+        "operationId": "accounts_api_accounts_get",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AccountsOut"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/activity": {
       "get": {
         "summary": "Activity Calendar",
@@ -2170,6 +2188,27 @@
   },
   "components": {
     "schemas": {
+      "AccountsOut": {
+        "properties": {
+          "selected": {
+            "type": "string",
+            "title": "Selected"
+          },
+          "accounts": {
+            "items": {
+              "type": "string"
+            },
+            "type": "array",
+            "title": "Accounts"
+          }
+        },
+        "type": "object",
+        "required": [
+          "selected",
+          "accounts"
+        ],
+        "title": "AccountsOut"
+      },
       "ActiveBlockOut": {
         "properties": {
           "start": {
